tests/negative/abstract_contract.lu
require "godot"

abstract class AbstractRunner
  abstract def run: String
end

class BadRunner < AbstractRunner
end
